pipeline/poi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registryhkl1754.azurecr.io/tripinsights/poi:1.0
        ports:
        - containerPort: 80
        # envFrom:
        # - secretRef:
        #     name: openhack-sql-secrets
        volumeMounts:
        - name: secrets-ohteam5store-inline
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: secrets-ohteam5store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvopenhackteam5-user-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
spec:
  type: ClusterIP
  ports:
  - port: 80 
    targetPort: 80
    name: http-poi-port
  selector:
    app: poi
