pipeline/trip-viewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registryhkl1754.azurecr.io/tripinsights/tripviewer:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
spec:
  type: ClusterIP
  ports:
  - port: 80 
    targetPort: 80
    name: http-tripviewer-port
  selector:
    app: tripviewer
