pipeline/aks-ingress-routing-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openhack-team5-api-ingress
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # poi service paths
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 80
      - path: /api/docs/poi
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 80
      - path: /swagger/docs/poi
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 80
      # trips service paths
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /api/docs/trips
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /api/json
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      # userprofile service paths
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
      - path: /api/docs/user
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
      # user-java service paths
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port:
              number: 80
      - path: /api/docs/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port:
              number: 80
      - path: /api/documentation/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port:
              number: 80
      - path: /api/swagger-resources
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port:
              number: 80
      - path: /api/api-docs
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port:
              number: 80

      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openhack-team5-web-ingress
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      ## trips-viewer service path.
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripviewer-service
            port: 
              number: 80
